chore: update .env.example with correct databricks variables

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
 # Databricks
 DATABRICKS_HOST=https://your-workspace-url.cloud.databricks.com
+DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/your_http_path_here
 DATABRICKS_TOKEN=your_personal_access_token_here
-DATABRICKS_SQL_WAREHOUSE_ID=your_warehouse_id_here
