--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,22 @@
-command: ["streamlit", "run", "app.py", "--server.port", "8000"]
+command: ["streamlit", "run", "app.py", "--server.port", "8000", "--server.headless", "true"]
 env:
   - name: ANTHROPIC_API_KEY
     valueFrom:
       secretKeyRef:
         name: dataforge-secrets
         key: anthropic_api_key
+  - name: DATABRICKS_HOST
+    valueFrom:
+      secretKeyRef:
+        name: dataforge-secrets
+        key: databricks_host
+  - name: DATABRICKS_HTTP_PATH
+    valueFrom:
+      secretKeyRef:
+        name: dataforge-secrets
+        key: databricks_http_path
+  - name: DATABRICKS_TOKEN
+    valueFrom:
+      secretKeyRef:
+        name: dataforge-secrets
+        key: databricks_token
