--- a/app.yaml
+++ b/app.yaml
@@ -1,22 +1,10 @@
 command: ["streamlit", "run", "app.py", "--server.port", "8000", "--server.headless", "true"]
 env:
   - name: ANTHROPIC_API_KEY
-    valueFrom:
-      secretKeyRef:
-        name: dataforge-secrets
-        key: anthropic_api_key
+    valueFrom: anthropic-api-key
   - name: DATABRICKS_HOST
-    valueFrom:
-      secretKeyRef:
-        name: dataforge-secrets
-        key: databricks_host
+    valueFrom: databricks-host
   - name: DATABRICKS_HTTP_PATH
-    valueFrom:
-      secretKeyRef:
-        name: dataforge-secrets
-        key: databricks_http_path
+    valueFrom: databricks-http-path
   - name: DATABRICKS_TOKEN
-    valueFrom:
-      secretKeyRef:
-        name: dataforge-secrets
-        key: databricks_token
+    valueFrom: databricks-token
